--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,11 @@ add_subdirectory(openswathalgo)
 #------------------------------------------------------------------------------
 # OpenMS core lib
 #------------------------------------------------------------------------------
+add_subdirectory(openms_core)
+
+#------------------------------------------------------------------------------
+# OpenMS core lib
+#------------------------------------------------------------------------------
 add_subdirectory(openms)
 
 #------------------------------------------------------------------------------
